﻿
2007-04-29  Brian Wellington <bwelling@xbill.org>
	* client/gtk/gui.c: Add support for NULL pointer for shortcuts.

2007-04-29  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c: Simplified code to handle better updates.

2007-04-29  Brian Wellington <bwelling@xbill.org>
	* client/gtk/gui.c: Add a workaround for gtk bug #434261 that
	  causes strings like (Fn) in toolbar labels to be mishandled.

2007-04-29  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c: Upgraded the code to 2.6, and allow for
	toolbuttons without shortcut keys.
	* common/network.c: Don't log the keepalive messages.

2007-04-28  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c, common/gtk/guimap.h, client/gtk/interface.c,
	client/gtk/frontend.c: Single click actions are set enabled with the
	same mechanism as the GtkActions.

2007-04-17  Roland Clobus <rclobus@bigfoot.com>
	* common/state.c, server/pregame.c: Disconnect during mode_pregame
	could crash the server.
	
2007-04-15  Bernd Ernesti <veega@users.sourceforge.net>
	* editor/gtk/editor.c, meta-server/main.c, server/gtk/main.c,
	server/main.c: #include <locale.h> where needed.

2007-04-09  Roland Clobus <rclobus@bigfoot.com>
	* pioneers.nsi.in: Added a better check for the Gtk+ runtime, and
        allow the installer to continue, even when no runtime is found.

2007-04-08  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Reorder the language codes (now alphabetical)
	
2007-03-04  Roland CLobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c, common/gtk/guimap.h, client/gtk/identify.c: Fix
	for #1589423. Sets a minimum size, to avoid drawing a polygon with
	only (0,0) as coordinates.
	
2007-02-18  Roland Clobus <rclobus@bigfoot.com>
	* server/player.c: Fix for #1473765. Don't recycle player objects when
	a (re)connect is in progress.
	* common/game.c, common/game.h, common/state.h, common/cards.c,
	server/develop.c, client/callback.h, client/gtk/settingscreen.c,